# EnsembleAnalysis

./: README.md  pyproject.toml  setup.py
EnsembleAnalysis/core/: ensemble.py  traj.py
EnsembleAnalysis/utils/: data.py  ensemble.py  gen_psf.py  plot.py
EnsembleCompare/: __init__.py
EnsembleCompare/utils/: plot.py  traj_analysis.py
examples/contactmaps/: contactmap.txt  contactmap_plt.py
